Added Connor's Zone

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li>South Korea</li>
       <li>China China China</li>
       <li>Winter</li>
+      <li>Connor's Tech Zone</li>
     </ul>
   </div>
 
