Added a pic-dumpster

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li>China China China</li>
       <li>Winter</li>
       <li>Connor's Tech Zone</li>
+      <li>T.O. Pic-Dumpster</li>
     </ul>
   </div>
 
