--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <div class="col-6 col-s-9">
     <h1>Photographs</h1>
     <p>Photos and Eurodollar dumpster fire</p>
+    <img src="images/peaches.jpg">
   </div>
 
   <div class="col-3 col-s-12">
