Added corpse class for img width

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
   </div>
 
-  <div class="col-6 col-s-9">
+  <div class="col-6 col-s-9 corpse">
     <h1>Photographs</h1>
     <p>Photos and Eurodollar dumpster fire</p>
     <img src="images/peaches.jpg">
@@ -41,7 +41,7 @@
 </div>
 
 <div class="footer">
-  <p>Resize the browser window to see how the content respond to the resizing.</p>
+  <p>Copyright Ethical Productions 2022.</p>
 </div>
 
 </body>
