--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
 <div class="footer">
   <p>Resize the browser window to see how the content respond to the resizing.</p>
 </div>
-
+<script src="scripts/main.js"></script>
 </body>
 </html>
