Added new "pic dump" & adjusted header link style

--- a/to-pic-dump.html
+++ b/to-pic-dump.html
@@ -23,7 +23,7 @@
                 <li>Winter</li>
                 <li>Connor's Tech Zone</li>
                 <a href="to-pic-dump.html">
-                    <li>T.O. Pic-Dumpster</li>
+                    <li><em>T.O. Pic-Dumpster</em></li>
                 </a>
             </ul>
         </div>
